feat: `etherscan-source` / `fetch` subcommand skeleton

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["bin/shadow-cli", "crates/tracing", "crates/config"]
+members = ["bin/shadow-cli", "crates/tracing", "crates/config", "crates/fetch"]
 default-members = ["bin/shadow-cli"]
 
 # Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
@@ -104,6 +104,7 @@ use_self = "allow"
 shadow-cli = { path = "bin/shadow-cli" }
 shadow-tracing = { path = "crates/tracing" }
 shadow-config = { path = "crates/config" }
+shadow-etherscan-fetch = { path = "crates/fetch" }
 
 # Crates.io
 clap = { version = "4", features = ["derive"] }
