--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["bin/shadow-cli", "crates/tracing", "crates/config", "crates/fetch"]
+members = ["bin/shadow-cli", "crates/tracing", "crates/config", "crates/fetch", "crates/common"]
 default-members = ["bin/shadow-cli"]
 
 # Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
@@ -105,6 +105,7 @@ shadow-cli = { path = "bin/shadow-cli" }
 shadow-tracing = { path = "crates/tracing" }
 shadow-config = { path = "crates/config" }
 shadow-etherscan-fetch = { path = "crates/fetch" }
+shadow-common = { path = "crates/common" }
 
 # Crates.io
 clap = { version = "4", features = ["derive"] }
@@ -123,3 +124,12 @@ rolling-file = "0.2.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 envy = "0.4.2"
+which = "6.0.1"
+chrono = "0.4.38"
+tempdir = "0.3.7"
+foundry-block-explorers = "0.5.0"
+alloy = "0.1.4"
+alloy-chains = "0.1.23"
+walkdir = "2.5.0"
+strsim = "0.11.1"
+alloy-json-abi = { version = "0.7.6", features = ["serde_json"]}
