--- a/crates/common/Cargo.toml
+++ b/crates/common/Cargo.toml
@@ -31,3 +31,4 @@ alloy-json-abi.workspace = true
 revm.workspace = true
 ethers-solc.workspace = true
 toml.workspace = true
+chrono.workspace = true
