--- a/crates/push/Cargo.toml
+++ b/crates/push/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "shadow-cli"
+name = "shadow-push"
 description.workspace = true
 version.workspace = true
 edition.workspace = true
@@ -14,13 +14,6 @@ license.workspace = true
 workspace = true
 
 [dependencies]
-shadow-tracing.workspace = true
-shadow-config.workspace = true
-shadow-etherscan-fetch.workspace = true
-shadow-compile.workspace = true
-shadow-init.workspace = true
-shadow-push.workspace = true
-
 eyre.workspace = true
 tokio.workspace = true
 clap.workspace = true
@@ -28,7 +21,10 @@ tracing.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 envy.workspace = true
-
-[[bin]]
-name = "shadow"
-path = "src/main.rs"
+which.workspace = true
+chrono.workspace = true
+tempdir.workspace = true
+foundry-block-explorers.workspace = true
+alloy.workspace = true
+alloy-chains.workspace = true
+shadow-common.workspace = true
