--- a/crates/common/Cargo.toml
+++ b/crates/common/Cargo.toml
@@ -32,3 +32,5 @@ revm.workspace = true
 ethers-solc.workspace = true
 toml.workspace = true
 chrono.workspace = true
+rayon.workspace = true
+hex.workspace = true
