--- a/crates/push/Cargo.toml
+++ b/crates/push/Cargo.toml
@@ -28,3 +28,4 @@ foundry-block-explorers.workspace = true
 alloy.workspace = true
 alloy-chains.workspace = true
 shadow-common.workspace = true
+pinata-sdk.workspace = true
