fix(fetch): use proper foundry project structure (#3)
* fix(fetch): use proper foundry project structure

* chore: cleanup remove git module

* fix: include original source as `original.json`

--- a/crates/common/Cargo.toml
+++ b/crates/common/Cargo.toml
@@ -35,3 +35,5 @@ rayon.workspace = true
 hex.workspace = true
 which.workspace = true
 alloy.workspace = true
+foundry-compilers.workspace = true
+zip.workspace = true
