--- a/Cargo.toml
+++ b/Cargo.toml
@@ -143,7 +143,8 @@ alloy-chains = "0.1.23"
 walkdir = "2.5.0"
 strsim = "0.11.1"
 alloy-json-abi = { version = "0.7.6", features = ["serde_json"]}
-foundry-block-explorers = "0.5.0"
+foundry-block-explorers = { version = "0.5.1", features = ["foundry-compilers"] }
+foundry-compilers = { version = "0.10.0", default-features = false }
 
 revm = { git = "https://github.com/bluealloy/revm", tag = "v40", default-features = false, features = [
     "ethersdb",
@@ -171,3 +172,4 @@ alloy = { version = "0.2.0", features = [
     "signer-trezor",
     "signer-yubihsm",
 ] }
+zip = "2.1.5"
