--- a/crates/simulate/Cargo.toml
+++ b/crates/simulate/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "shadow-common"
+name = "shadow-simulate"
 description.workspace = true
 version.workspace = true
 edition.workspace = true
@@ -21,22 +21,15 @@ tracing.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 envy.workspace = true
-foundry-block-explorers.workspace = true
-alloy-chains.workspace = true
-tempdir.workspace = true
-walkdir.workspace = true
-strsim.workspace = true
-alloy-json-abi.workspace = true
-revm.workspace = true
-ethers-solc.workspace = true
-toml.workspace = true
-chrono.workspace = true
-rayon.workspace = true
-hex.workspace = true
 which.workspace = true
+chrono.workspace = true
+tempdir.workspace = true
+foundry-block-explorers.workspace = true
 alloy.workspace = true
-foundry-compilers.workspace = true
-zip.workspace = true
+alloy-chains.workspace = true
+shadow-common.workspace = true
+pinata-sdk.workspace = true
+revm.workspace = true
+walkdir.workspace = true
 foundry-evm.workspace = true
-parking_lot.workspace = true
-futures.workspace = true
+hex.workspace = true
