feat(pin): call out to `logs.xyz/api/pin` on push

--- a/crates/push/Cargo.toml
+++ b/crates/push/Cargo.toml
@@ -30,3 +30,4 @@ alloy-chains.workspace = true
 shadow-common.workspace = true
 pinata-sdk.workspace = true
 revm.workspace = true
+reqwest.workspace = true
