--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ members = [
     "crates/common",
     "crates/compile",
     "crates/init",
-    "crates/push"
+    "crates/push",
+    "crates/clone",
 ]
 default-members = ["bin/shadow-cli"]
 
@@ -118,6 +119,7 @@ shadow-common = { path = "crates/common" }
 shadow-compile = { path = "crates/compile" }
 shadow-init = { path = "crates/init" }
 shadow-push = { path = "crates/push" }
+shadow-clone = { path = "crates/clone" }
 
 # Crates.io
 clap = { version = "4", features = ["derive"] }
