--- a/bin/shadow-cli/Cargo.toml
+++ b/bin/shadow-cli/Cargo.toml
@@ -20,6 +20,7 @@ shadow-etherscan-fetch.workspace = true
 shadow-compile.workspace = true
 shadow-init.workspace = true
 shadow-push.workspace = true
+shadow-simulate.workspace = true
 shadow-clone.workspace = true
 
 eyre.workspace = true
